feat: enable code improvement mode and harden patch engine
- Enhanced Orchestrator to continue analysis even if baseline tests pass, enabling 'Improvement Mode'.
- Updated Gemini prompts to request refactoring and best practices when no failures are detected.
- Hardened PatchEngine to automatically fix common LLM patch formatting issues (missing context spaces).
- Improved frontend and backend error handling for cleaner failure reporting.
- Added 'SUCCESS' and 'NO_TESTS_FOUND' analysis types for better user feedback.